commit translated contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.styleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.styleupdatedata.yml
@@ -75,7 +75,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFontUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#formulaHidden:member'
     summary: |-
-      指示工作表受保护时是否隐藏公式。
+      指定在工作表处于保护状态时是否隐藏公式。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
@@ -105,7 +105,7 @@ items:
           - 'excel!Excel.Interfaces.StyleUpdateData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeAlignment:member'
     summary: |-
-      指示样式是否包含 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
+      指定样式是否包括 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeAlignment
@@ -120,7 +120,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeBorder:member'
     summary: |-
-      指示样式是否包含 Color、ColorIndex、LineStyle 和 Weight 边框属性。
+      指定样式是否包含 Color、ColorIndex、LineStyle 和权数边框属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeBorder
@@ -135,7 +135,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeFont:member'
     summary: |-
-      指示样式是否包含 Background、Bold、Color、ColorIndex、FontStyle、Italic、Name、Size、Strikethrough、Subscrip、Superscript 和 Underline 字体属性。
+      指定样式是否包括背景、粗体、颜色、ColorIndex、FontStyle、斜体、名称、大小、删除线、下标、上标和下划线字体属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeFont
@@ -150,7 +150,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeNumber:member'
     summary: |-
-      指示样式是否包含 NumberFormat 属性。
+      指定样式是否包含 NumberFormat 属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeNumber
@@ -165,7 +165,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includePatterns:member'
     summary: |-
-      指示样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
+      指定样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includePatterns
@@ -180,7 +180,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeProtection:member'
     summary: |-
-      指示样式是否包含 FormulaHidden 和 Locked 保护属性。
+      指定样式是否包含 FormulaHidden 和 Locked 保护属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeProtection
@@ -210,7 +210,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#locked:member'
     summary: |-
-      指示工作表受保护时是否锁定对象。
+      指定在工作表处于保护状态时是否锁定对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
@@ -270,7 +270,7 @@ items:
           - 'excel!Excel.Interfaces.StyleUpdateData#readingOrder~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#shrinkToFit:member'
     summary: |-
-      指示文本是否自动缩小以适合可用列宽。
+      指定文本是否自动收缩以显示可用列宽。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
@@ -285,7 +285,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#verticalAlignment:member'
     summary: |-
-      表示样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
+      指定样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
@@ -300,7 +300,7 @@ items:
           - 'excel!Excel.Interfaces.StyleUpdateData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#wrapText:member'
     summary: |-
-      指示 Microsoft Excel 是否将对象中的文本换行。
+      指定 Excel 是否对对象中的文本进行换行。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
