--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalformatdata.yml
@@ -31,7 +31,7 @@ items:
       - 'excel!Excel.Interfaces.ConditionalFormatData#type:member'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#cellValue:member'
     summary: |-
-      如果当前条件格式为 CellValue 类型，则返回单元格值条件格式属性。 例如，设置5到10之间的所有单元格的格式。 只读。
+      如果当前条件格式为 CellValue 类型，则返回单元格值条件格式属性。 例如，设置5到10之间的所有单元格的格式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellValue
@@ -46,7 +46,7 @@ items:
           - 'excel!Excel.Interfaces.CellValueConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#cellValueOrNullObject:member'
     summary: |-
-      如果当前条件格式为 CellValue 类型，则返回单元格值条件格式属性。 例如，设置5到10之间的所有单元格的格式。 只读。
+      如果当前条件格式为 CellValue 类型，则返回单元格值条件格式属性。 例如，设置5到10之间的所有单元格的格式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellValueOrNullObject
@@ -61,7 +61,7 @@ items:
           - 'excel!Excel.Interfaces.CellValueConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#colorScale:member'
     summary: |-
-      如果当前条件格式为色阶类型，则返回色阶条件格式属性。 只读。
+      如果当前条件格式为色阶类型，则返回色阶条件格式属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: colorScale
@@ -76,7 +76,7 @@ items:
           - 'excel!Excel.Interfaces.ColorScaleConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#colorScaleOrNullObject:member'
     summary: |-
-      如果当前条件格式为色阶类型，则返回色阶条件格式属性。 只读。
+      如果当前条件格式为色阶类型，则返回色阶条件格式属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: colorScaleOrNullObject
@@ -91,7 +91,7 @@ items:
           - 'excel!Excel.Interfaces.ColorScaleConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#custom:member'
     summary: |-
-      如果当前条件格式为自定义类型，则返回自定义条件格式属性。 只读。
+      如果当前条件格式为自定义类型，则返回自定义条件格式属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: custom
@@ -106,7 +106,7 @@ items:
           - 'excel!Excel.Interfaces.CustomConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#customOrNullObject:member'
     summary: |-
-      如果当前条件格式为自定义类型，则返回自定义条件格式属性。 只读。
+      如果当前条件格式为自定义类型，则返回自定义条件格式属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customOrNullObject
@@ -121,7 +121,7 @@ items:
           - 'excel!Excel.Interfaces.CustomConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#dataBar:member'
     summary: |-
-      如果当前条件格式为数据栏，则返回数据条属性。 只读。
+      如果当前条件格式为数据栏，则返回数据条属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataBar
@@ -136,7 +136,7 @@ items:
           - 'excel!Excel.Interfaces.DataBarConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#dataBarOrNullObject:member'
     summary: |-
-      如果当前条件格式为数据栏，则返回数据条属性。 只读。
+      如果当前条件格式为数据栏，则返回数据条属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataBarOrNullObject
@@ -151,7 +151,7 @@ items:
           - 'excel!Excel.Interfaces.DataBarConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#iconSet:member'
     summary: |-
-      如果当前条件格式为 IconSet 类型，则返回 IconSet 条件格式属性。 只读。
+      如果当前条件格式为 IconSet 类型，则返回 IconSet 条件格式属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: iconSet
@@ -166,7 +166,7 @@ items:
           - 'excel!Excel.Interfaces.IconSetConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#iconSetOrNullObject:member'
     summary: |-
-      如果当前条件格式为 IconSet 类型，则返回 IconSet 条件格式属性。 只读。
+      如果当前条件格式为 IconSet 类型，则返回 IconSet 条件格式属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: iconSetOrNullObject
@@ -181,7 +181,7 @@ items:
           - 'excel!Excel.Interfaces.IconSetConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#id:member'
     summary: |-
-      当前 ConditionalFormatCollection 内的条件格式的优先级。 只读。
+      当前 ConditionalFormatCollection 内的条件格式的优先级。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -226,7 +226,7 @@ items:
           - 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#priority:member'
     summary: |-
-      条件格式集合中当前存在此条件格式的优先级（或索引）。 更改此设置还会更改其他条件格式的优先级，以允许进行连续的优先级顺序。 使用负优先级从后开始。 优先级大于界限将获取并设置为最大值（如果为负，则为最小值）优先级。 另请注意，如果您更改优先级，则必须在该新的优先级位置重新获取该对象的新副本（如果要对其进行进一步的更改）。 只读。
+      条件格式集合中当前存在此条件格式的优先级（或索引）。 更改此设置还会更改其他条件格式的优先级，以允许进行连续的优先级顺序。 使用负优先级从后开始。 优先级大于界限将获取并设置为最大值（如果为负，则为最小值）优先级。 另请注意，如果您更改优先级，则必须在该新的优先级位置重新获取该对象的新副本（如果要对其进行进一步的更改）。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: priority
@@ -256,7 +256,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#textComparison:member'
     summary: |-
-      如果当前条件格式是文本类型，则返回特定的文本条件格式属性。 例如，设置与单词 "Text" 相匹配的单元格的格式。 只读。
+      如果当前条件格式是文本类型，则返回特定的文本条件格式属性。 例如，设置与单词 "Text" 相匹配的单元格的格式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textComparison
@@ -271,7 +271,7 @@ items:
           - 'excel!Excel.Interfaces.TextConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#textComparisonOrNullObject:member'
     summary: |-
-      如果当前条件格式是文本类型，则返回特定的文本条件格式属性。 例如，设置与单词 "Text" 相匹配的单元格的格式。 只读。
+      如果当前条件格式是文本类型，则返回特定的文本条件格式属性。 例如，设置与单词 "Text" 相匹配的单元格的格式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textComparisonOrNullObject
@@ -286,7 +286,7 @@ items:
           - 'excel!Excel.Interfaces.TextConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#topBottom:member'
     summary: |-
-      如果当前条件格式为 TopBottom 类型，则返回 Top/底端条件格式属性。 例如，设置前10% 或前10个项目的格式。 只读。
+      如果当前条件格式为 TopBottom 类型，则返回 Top/底端条件格式属性。 例如，设置前10% 或前10个项目的格式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: topBottom
@@ -301,7 +301,7 @@ items:
           - 'excel!Excel.Interfaces.TopBottomConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#topBottomOrNullObject:member'
     summary: |-
-      如果当前条件格式为 TopBottom 类型，则返回 Top/底端条件格式属性。 例如，设置前10% 或前10个项目的格式。 只读。
+      如果当前条件格式为 TopBottom 类型，则返回 Top/底端条件格式属性。 例如，设置前10% 或前10个项目的格式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: topBottomOrNullObject
@@ -316,7 +316,7 @@ items:
           - 'excel!Excel.Interfaces.TopBottomConditionalFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatData#type:member'
     summary: |-
-      一种条件格式。 一次只能设置一个。 只读。
+      一种条件格式。 一次只能设置一个。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
