--- a/docs/docs-ref-autogen/visio/visio/visio.page.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.page.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.Page#activate:member(1)'
@@ -236,7 +236,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'visio!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'visio!Visio.Page#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -314,7 +314,7 @@ items:
         type:
           - number
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.ShapeCollection:class'
     name: Visio.ShapeCollection
@@ -328,7 +328,7 @@ references:
     name: Visio.Interfaces.PageLoadOptions
   - uid: 'visio!Visio.Interfaces.PageUpdateData:interface'
     name: Interfaces.PageUpdateData
-  - uid: 'visio!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'visio!Visio.Interfaces.PageData:interface'
     name: Visio.Interfaces.PageData
