--- a/docs/docs-ref-autogen/excel/excel/excel.chartbinoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.chartbinoptions.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartBinOptions#allowOverflow:member'
@@ -30,7 +30,7 @@ items:
       - 'excel!Excel.ChartBinOptions#width:member'
   - uid: 'excel!Excel.ChartBinOptions#allowOverflow:member'
     summary: |-
-      指定是否在直方图或排列图中启用容器溢出。 读/写。
+      指定直方图图表或排列图表中是否启用了 "bin 溢出"。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowOverflow
@@ -45,7 +45,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartBinOptions#allowUnderflow:member'
     summary: |-
-      指定是否在直方图或排列图中启用容器下溢。 读/写。
+      指定直方图图表或排列图表中是否启用了 bin 下溢。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowUnderflow
@@ -72,7 +72,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartBinOptions#count:member'
     summary: |-
-      返回或设置直方图或排列图的容器数量。 读/写。
+      指定直方图图表或排列图表的分类数。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
@@ -149,7 +149,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartBinOptions#overflowValue:member'
     summary: |-
-      返回或设置直方图或排列图的容器溢出值。 读/写。
+      指定直方图图表或排列图表的 "bin 溢出" 值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overflowValue
@@ -187,7 +187,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartBinOptions#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -221,7 +221,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartBinOptions#type:member'
     summary: |-
-      返回或设置直方图或排列图的容器类型。 读/写。
+      指定用于直方图图表或排列图表的 bin 类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -236,7 +236,7 @@ items:
           - 'excel!Excel.ChartBinOptions#type~0:complex'
   - uid: 'excel!Excel.ChartBinOptions#underflowValue:member'
     summary: |-
-      返回或设置直方图或排列图的容器下溢值。 读/写。
+      指定直方图图表或排列图表的 bin 下溢值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underflowValue
@@ -251,7 +251,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartBinOptions#width:member'
     summary: |-
-      返回或设置直方图或排列图的容器宽度值。 读/写。
+      指定直方图图表或排列图表的纸盒宽度值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -265,7 +265,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -275,7 +275,7 @@ references:
     name: Excel.Interfaces.ChartBinOptionsLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData:interface'
     name: Interfaces.ChartBinOptionsUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData:interface'
     name: Excel.Interfaces.ChartBinOptionsData
