--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartaxistitledata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartaxistitledata.yml
@@ -14,7 +14,7 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisTitleData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#format:member'
     summary: |-
-      表示图表坐标轴标题的格式。 只读。
+      指定图表坐标轴标题的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -29,7 +29,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#text:member'
     summary: |-
-      表示坐标轴标题。
+      指定轴标题。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -44,7 +44,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#visible:member'
     summary: |-
-      指定坐标轴标题是否可见的布尔值。
+      指定轴标题是否为 shape.visibile。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
