--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.textframe.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.textframe.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.TextFrame#autoSizeSetting:member'
@@ -37,7 +37,7 @@ items:
       - 'excel!Excel.TextFrame#verticalOverflow:member'
   - uid: 'excel!Excel.TextFrame#autoSizeSetting:member'
     summary: |-
-      获取或设置文本框的自动调整大小设置。 可以将文本框设置为自动调整文本大小以适应文本框，或自动调整文本框大小以适应文本，或者不使用自动调整大小设置。
+      文本框架的自动调整大小设置。 可以将文本框设置为自动调整文本大小以适应文本框，或自动调整文本框大小以适应文本，或者不使用自动调整大小设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoSizeSetting
@@ -108,7 +108,7 @@ items:
           ```
   - uid: 'excel!Excel.TextFrame#hasText:member'
     summary: |-
-      指定文本框是否包含文本。
+      指定文本框架是否包含文本。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasText
@@ -298,7 +298,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.TextFrame#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -391,7 +391,7 @@ items:
         type:
           - 'excel!Excel.TextFrame#verticalOverflow~0:complex'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.TextFrame#autoSizeSetting~0:complex'
     name: Excel.ShapeAutoSize | "AutoSizeNone" | "AutoSizeTextToFitShape" | "AutoSizeShapeToFitText" | "AutoSizeMixed"
@@ -446,7 +446,7 @@ references:
         fullName: ' | "LeftToRight" | "RightToLeft"'
   - uid: 'excel!Excel.Interfaces.TextFrameUpdateData:interface'
     name: Interfaces.TextFrameUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.TextRange:class'
     name: Excel.TextRange
