--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartlegendentryloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartlegendentryloadoptions.yml
@@ -33,7 +33,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#height:member'
     summary: |-
-      表示图表图例上的 legendEntry 的高度。
+      指定图表图例上的 legendEntry 的高度。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -48,7 +48,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#index:member'
     summary: |-
-      表示图表图例中的 legendEntry 的索引。
+      指定图表图例中的 legendEntry 的索引。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
@@ -63,7 +63,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#left:member'
     summary: |-
-      表示图表 legendEntry 的左侧。
+      指定图表 legendEntry 的左侧。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -78,7 +78,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#top:member'
     summary: |-
-      表示图表 legendEntry 的顶部。
+      指定图表 legendEntry 的顶部。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
