--- a/docs/docs-ref-autogen/onenote/onenote/onenote.tablecell.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.tablecell.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.TableCell#appendHtml:member(1)'
@@ -481,7 +481,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'onenote!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'onenote!OneNote.TableCell#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -555,7 +555,7 @@ items:
           - 'onenote!OneNote.TableCell:class'
         description: ''
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.Image:class'
     name: OneNote.Image
@@ -575,7 +575,7 @@ references:
     name: OneNote.TableRow
   - uid: 'onenote!OneNote.Interfaces.TableCellUpdateData:interface'
     name: Interfaces.TableCellUpdateData
-  - uid: 'onenote!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'onenote!OneNote.Interfaces.TableCellData:interface'
     name: OneNote.Interfaces.TableCellData
