commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel/excel.filterpivothierarchycollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.filterpivothierarchycollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.FilterPivotHierarchyCollection:class'
     summary: |-
-      <span data-ttu-id="c57b3-101">代表与数据透视表相关联的 FilterPivotHierarchy 项目的集合。</span><span class="sxs-lookup"><span data-stu-id="c57b3-101">Represents a collection of FilterPivotHierarchy items associated with the PivotTable.</span></span>
+      代表与数据透视表相关联的 FilterPivotHierarchy 项目的集合。
 
-      <span data-ttu-id="c57b3-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c57b3-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.FilterPivotHierarchyCollection
     fullName: Excel.FilterPivotHierarchyCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.FilterPivotHierarchyCollection#add:member(1)'
@@ -27,9 +27,9 @@ items:
       - 'excel!Excel.FilterPivotHierarchyCollection#toJSON:member(1)'
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#add:member(1)'
     summary: |-
-      <span data-ttu-id="c57b3-103">将 PivotHierarchy 添加到当前轴。</span><span class="sxs-lookup"><span data-stu-id="c57b3-103">Adds the PivotHierarchy to the current axis.</span></span> <span data-ttu-id="c57b3-104">如果行、列或筛选轴上的其他位置存在层次结构，则会将该层次结构从相应的位置移除。</span><span class="sxs-lookup"><span data-stu-id="c57b3-104">If the hierarchy is present elsewhere on the row, column, or filter axis, it will be removed from that location.</span></span>
+      将 PivotHierarchy 添加到当前轴。 如果行、列或筛选轴上的其他位置存在层次结构，则会将该层次结构从相应的位置移除。
 
-      <span data-ttu-id="c57b3-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c57b3-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: add(pivotHierarchy)
     fullName: add(pivotHierarchy)
     langs:
@@ -47,7 +47,7 @@ items:
           type:
             - 'excel!Excel.PivotHierarchy:class'
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#context:member'
-    summary: <span data-ttu-id="c57b3-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="c57b3-106">The request context associated with the object.</span></span> <span data-ttu-id="c57b3-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="c57b3-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="c57b3-108">获取集合中的透视层级结构的数量。</span><span class="sxs-lookup"><span data-stu-id="c57b3-108">Gets the number of pivot hierarchies in the collection.</span></span>
+      获取集合中的透视层级结构的数量。
 
-      <span data-ttu-id="c57b3-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c57b3-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -76,9 +76,9 @@ items:
         description: ''
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="c57b3-110">按名称或 ID 获取 FilterPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="c57b3-110">Gets a FilterPivotHierarchy by its name or id.</span></span>
+      按名称或 ID 获取 FilterPivotHierarchy。
 
-      <span data-ttu-id="c57b3-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c57b3-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(name)
     fullName: getItem(name)
     langs:
@@ -92,14 +92,14 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="c57b3-112">要检索的 FilterPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="c57b3-112">Name of the FilterPivotHierarchy to be retrieved.</span></span>
+          description: 要检索的 FilterPivotHierarchy 的名称。
           type:
             - string
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#getItemOrNullObject:member(1)'
     summary: |-
-      <span data-ttu-id="c57b3-113">按名称获取 FilterPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="c57b3-113">Gets a FilterPivotHierarchy by name.</span></span> <span data-ttu-id="c57b3-114">如果 FilterPivotHierarchy 不存在，则返回 Null 对象。</span><span class="sxs-lookup"><span data-stu-id="c57b3-114">If the FilterPivotHierarchy does not exist, will return a null object.</span></span>
+      按名称获取 FilterPivotHierarchy。 如果 FilterPivotHierarchy 不存在，则返回 Null 对象。
 
-      <span data-ttu-id="c57b3-115">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c57b3-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemOrNullObject(name)
     fullName: getItemOrNullObject(name)
     langs:
@@ -113,11 +113,11 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="c57b3-116">要检索的 FilterPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="c57b3-116">Name of the FilterPivotHierarchy to be retrieved.</span></span>
+          description: 要检索的 FilterPivotHierarchy 的名称。
           type:
             - string
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#items:member'
-    summary: <span data-ttu-id="c57b3-117">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="c57b3-117">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -129,7 +129,7 @@ items:
         type:
           - 'excel!Excel.FilterPivotHierarchyCollection#items~0:complex'
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#load:member(1)'
-    summary: <span data-ttu-id="c57b3-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c57b3-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c57b3-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c57b3-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -143,11 +143,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="c57b3-120">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="c57b3-120">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.FilterPivotHierarchyCollection#load~0:complex'
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#load:member(2)'
-    summary: <span data-ttu-id="c57b3-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c57b3-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c57b3-122">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c57b3-122">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -161,11 +161,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="c57b3-123">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="c57b3-123">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#load:member(3)'
-    summary: <span data-ttu-id="c57b3-124">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c57b3-124">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c57b3-125">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c57b3-125">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -179,14 +179,14 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="c57b3-126">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="c57b3-126">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#remove:member(1)'
     summary: |-
-      <span data-ttu-id="c57b3-127">从当前轴删除 PivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="c57b3-127">Removes the PivotHierarchy from the current axis.</span></span>
+      从当前轴删除 PivotHierarchy。
 
-      <span data-ttu-id="c57b3-128">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c57b3-128">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: remove(filterPivotHierarchy)
     fullName: remove(filterPivotHierarchy)
     langs:
@@ -204,7 +204,7 @@ items:
           type:
             - 'excel!Excel.FilterPivotHierarchy:class'
   - uid: 'excel!Excel.FilterPivotHierarchyCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="c57b3-129">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="c57b3-129">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="c57b3-130">.</span><span class="sxs-lookup"><span data-stu-id="c57b3-130"></span></span> <span data-ttu-id="c57b3-131">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="c57b3-131"></span></span><!-- --><span data-ttu-id="c57b3-132">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.FilterPivotHierarchyCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.FilterPivotHierarchyCollectionData`</span><span class="sxs-lookup"><span data-stu-id="c57b3-132">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.FilterPivotHierarchyCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.FilterPivotHierarchyCollectionData`</span></span><!-- --><span data-ttu-id="c57b3-133">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="c57b3-133">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.FilterPivotHierarchyCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.FilterPivotHierarchyCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -217,7 +217,7 @@ items:
           - 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.FilterPivotHierarchy:class'
     name: Excel.FilterPivotHierarchy
@@ -229,7 +229,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -257,7 +257,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionData:interface'
     name: Excel.Interfaces.FilterPivotHierarchyCollectionData
