--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlegendloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlegendloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="44a9b-101">表示图表中的图例。</span><span class="sxs-lookup"><span data-stu-id="44a9b-101">Represents the legend in a chart.</span></span>
+      表示图表中的图例。
 
-      <span data-ttu-id="44a9b-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartLegendLoadOptions
     fullName: Excel.Interfaces.ChartLegendLoadOptions
     langs:
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member'
       - 'excel!Excel.Interfaces.ChartLegendLoadOptions#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#$all:member'
-    summary: '<span data-ttu-id="44a9b-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="44a9b-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="44a9b-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="44a9b-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="44a9b-105">).</span><span class="sxs-lookup"><span data-stu-id="44a9b-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -36,9 +36,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="44a9b-106">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="44a9b-106">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
+      表示图表图例的格式，包括填充和字体格式。
 
-      <span data-ttu-id="44a9b-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -51,9 +51,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="44a9b-108">表示图表上的图例的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="44a9b-108">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="44a9b-109">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="44a9b-109">Null if legend is not visible.</span></span>
+      指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="44a9b-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -66,9 +66,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="44a9b-111">代表图表图例的左侧（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="44a9b-111">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="44a9b-112">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="44a9b-112">Null if legend is not visible.</span></span>
+      指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="44a9b-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -81,9 +81,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#overlay:member'
     summary: |-
-      <span data-ttu-id="44a9b-114">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="44a9b-114">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      指定图表图例是否应与图表的主体重叠。
 
-      <span data-ttu-id="44a9b-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -96,9 +96,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="44a9b-116">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="44a9b-116">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="44a9b-117">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="44a9b-117">See Excel.ChartLegendPosition for details.</span></span>
+      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
-      <span data-ttu-id="44a9b-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -111,9 +111,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#showShadow:member'
     summary: |-
-      <span data-ttu-id="44a9b-119">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="44a9b-119">Represents if the legend has a shadow on the chart.</span></span>
+      指定图例在图表上是否有阴影。
 
-      <span data-ttu-id="44a9b-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
     fullName: showShadow
     langs:
@@ -126,9 +126,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="44a9b-121">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="44a9b-121">Represents the top of a chart legend.</span></span>
+      指定图表图例的顶端。
 
-      <span data-ttu-id="44a9b-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -141,9 +141,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="44a9b-123">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="44a9b-123">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      指定 ChartLegend 是否可见。
 
-      <span data-ttu-id="44a9b-124">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -156,9 +156,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="44a9b-125">表示图表上的图例的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="44a9b-125">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="44a9b-126">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="44a9b-126">Null if legend is not visible.</span></span>
+      指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="44a9b-127">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44a9b-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
