--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.custompropertyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.custompropertyloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.CustomPropertyLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="d6d13-101">表示自定义属性。</span><span class="sxs-lookup"><span data-stu-id="d6d13-101">Represents a custom property.</span></span>
+      表示自定义属性。
 
-      <span data-ttu-id="d6d13-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d13-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.CustomPropertyLoadOptions
     fullName: Excel.Interfaces.CustomPropertyLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.CustomPropertyLoadOptions#type:member'
       - 'excel!Excel.Interfaces.CustomPropertyLoadOptions#value:member'
   - uid: 'excel!Excel.Interfaces.CustomPropertyLoadOptions#$all:member'
-    summary: '<span data-ttu-id="d6d13-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="d6d13-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="d6d13-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="d6d13-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="d6d13-105">).</span><span class="sxs-lookup"><span data-stu-id="d6d13-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyLoadOptions#key:member'
     summary: |-
-      <span data-ttu-id="d6d13-106">获取 customProperty 的键。</span><span class="sxs-lookup"><span data-stu-id="d6d13-106">Gets the key of the custom property.</span></span> <span data-ttu-id="d6d13-107">只读。</span><span class="sxs-lookup"><span data-stu-id="d6d13-107">Read only.</span></span>
+      自定义属性的键。
 
-      <span data-ttu-id="d6d13-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d13-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: key
     fullName: key
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="d6d13-109">获取自定义属性的值类型。</span><span class="sxs-lookup"><span data-stu-id="d6d13-109">Gets the value type of the custom property.</span></span> <span data-ttu-id="d6d13-110">只读。</span><span class="sxs-lookup"><span data-stu-id="d6d13-110">Read only.</span></span>
+      用于自定义属性的值的类型。
 
-      <span data-ttu-id="d6d13-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d13-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="d6d13-112">获取或设置自定义属性的值。</span><span class="sxs-lookup"><span data-stu-id="d6d13-112">Gets or sets the value of the custom property.</span></span>
+      自定义属性的值。
 
-      <span data-ttu-id="d6d13-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d13-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
