--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.chartseriescollection.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.chartseriescollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartSeriesCollection:class'
     summary: |-
-      <span data-ttu-id="0fd19-101">表示图表系列的集合。</span><span class="sxs-lookup"><span data-stu-id="0fd19-101">Represents a collection of chart series.</span></span>
+      表示图表系列的集合。
 
-      <span data-ttu-id="0fd19-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fd19-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartSeriesCollection
     fullName: Excel.ChartSeriesCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartSeriesCollection#context:member'
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.ChartSeriesCollection#load:member(3)'
       - 'excel!Excel.ChartSeriesCollection#toJSON:member(1)'
   - uid: 'excel!Excel.ChartSeriesCollection#context:member'
-    summary: <span data-ttu-id="0fd19-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="0fd19-103">The request context associated with the object.</span></span> <span data-ttu-id="0fd19-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="0fd19-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartSeriesCollection#count:member'
     summary: |-
-      <span data-ttu-id="0fd19-105">返回集合中的系列数量。</span><span class="sxs-lookup"><span data-stu-id="0fd19-105">Returns the number of series in the collection.</span></span> <span data-ttu-id="0fd19-106">只读。</span><span class="sxs-lookup"><span data-stu-id="0fd19-106">Read-only.</span></span>
+      返回集合中的系列数量。
 
-      <span data-ttu-id="0fd19-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fd19-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -52,9 +52,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartSeriesCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="0fd19-108">返回集合中的系列数量。</span><span class="sxs-lookup"><span data-stu-id="0fd19-108">Returns the number of series in the collection.</span></span>
+      返回集合中的系列数量。
 
-      <span data-ttu-id="0fd19-109">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fd19-109">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -68,9 +68,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartSeriesCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="0fd19-110">根据其在集合中的位置检索系列</span><span class="sxs-lookup"><span data-stu-id="0fd19-110">Retrieves a series based on its position in the collection.</span></span>
+      根据其在集合中的位置检索系列
 
-      <span data-ttu-id="0fd19-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fd19-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -84,7 +84,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="0fd19-112">示例</span><span class="sxs-lookup"><span data-stu-id="0fd19-112">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Get the name of the first series in the series collection.
@@ -103,11 +103,11 @@ items:
           ```
       parameters:
         - id: index
-          description: <span data-ttu-id="0fd19-113">要检索的对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="0fd19-113">Index value of the object to be retrieved.</span></span> <span data-ttu-id="0fd19-114">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="0fd19-114">Zero-indexed.</span></span>
+          description: 要检索的对象的索引值。 从零开始编制索引。
           type:
             - number
   - uid: 'excel!Excel.ChartSeriesCollection#items:member'
-    summary: <span data-ttu-id="0fd19-115">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="0fd19-115">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -119,7 +119,7 @@ items:
         type:
           - 'excel!Excel.ChartSeriesCollection#items~0:complex'
   - uid: 'excel!Excel.ChartSeriesCollection#load:member(1)'
-    summary: <span data-ttu-id="0fd19-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="0fd19-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="0fd19-117">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -133,11 +133,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="0fd19-118">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="0fd19-118">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.ChartSeriesCollection#load~0:complex'
   - uid: 'excel!Excel.ChartSeriesCollection#load:member(2)'
-    summary: <span data-ttu-id="0fd19-119">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="0fd19-120">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="0fd19-120">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -151,7 +151,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="0fd19-121">示例</span><span class="sxs-lookup"><span data-stu-id="0fd19-121">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Getting the names of series in the series collection.
@@ -188,11 +188,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="0fd19-122">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-122">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartSeriesCollection#load:member(3)'
-    summary: <span data-ttu-id="0fd19-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="0fd19-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="0fd19-124">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -206,11 +206,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="0fd19-125">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-125">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.ChartSeriesCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="0fd19-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="0fd19-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="0fd19-127">.</span><span class="sxs-lookup"><span data-stu-id="0fd19-127"></span></span> <span data-ttu-id="0fd19-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="0fd19-128"></span></span><!-- --><span data-ttu-id="0fd19-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ChartSeriesCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartSeriesCollectionData`</span><span class="sxs-lookup"><span data-stu-id="0fd19-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.ChartSeriesCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartSeriesCollectionData`</span></span><!-- --><span data-ttu-id="0fd19-130">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="0fd19-130">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ChartSeriesCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartSeriesCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -223,7 +223,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -231,7 +231,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -261,7 +261,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionData:interface'
     name: Excel.Interfaces.ChartSeriesCollectionData
