--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartaxisformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartaxisformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisFormatData:interface'
-    summary: <span data-ttu-id="fce06-101">描述通过调用返回的数据的接口`chartAxisFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="fce06-101">An interface describing the data returned by calling `chartAxisFormat.toJSON()`</span></span><!-- --><span data-ttu-id="fce06-102">.</span><span class="sxs-lookup"><span data-stu-id="fce06-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartAxisFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartAxisFormatData
     fullName: Excel.Interfaces.ChartAxisFormatData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisFormatData#line:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisFormatData#font:member'
     summary: |-
-      <span data-ttu-id="fce06-103">表示图表坐标轴元素的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="fce06-103">Represents the font attributes (font name, font size, color, etc.) for a chart axis element.</span></span> <span data-ttu-id="fce06-104">只读。</span><span class="sxs-lookup"><span data-stu-id="fce06-104">Read-only.</span></span>
+      指定图表轴元素的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="fce06-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fce06-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartFontData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisFormatData#line:member'
     summary: |-
-      <span data-ttu-id="fce06-106">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="fce06-106">Represents chart line formatting.</span></span> <span data-ttu-id="fce06-107">只读。</span><span class="sxs-lookup"><span data-stu-id="fce06-107">Read-only.</span></span>
+      指定图表线格式。
 
-      <span data-ttu-id="fce06-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fce06-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
     fullName: line
     langs:
