--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.rangereference.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.rangereference.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.RangeReference:interface'
     summary: |-
-      <span data-ttu-id="1d5bd-101">代表表单 SheetName 的字符串引用！A1： B5，或全局或本地命名区域。</span><span class="sxs-lookup"><span data-stu-id="1d5bd-101">Represents a string reference of the form SheetName!A1:B5, or a global or local named range.</span></span>
+      代表表单 SheetName 的字符串引用！A1： B5，或全局或本地命名区域。
 
-      <span data-ttu-id="1d5bd-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1d5bd-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RangeReference
     fullName: Excel.RangeReference
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.RangeReference#address:member'
   - uid: 'excel!Excel.RangeReference#address:member'
     summary: |-
-      <span data-ttu-id="1d5bd-103">获取或设置区域的地址。例如，"SheetName！A1： B5 '。</span><span class="sxs-lookup"><span data-stu-id="1d5bd-103">Gets or sets the address of the range; for example 'SheetName!A1:B5'.</span></span>
+      区域的地址;例如，"SheetName！A1： B5 '。
 
-      <span data-ttu-id="1d5bd-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1d5bd-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
     fullName: address
     langs:
