--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.bindingcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.bindingcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.BindingCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="e6f44-101">表示属于工作簿的所有绑定对象的集合。</span><span class="sxs-lookup"><span data-stu-id="e6f44-101">Represents the collection of all the binding objects that are part of the workbook.</span></span>
+      表示属于工作簿的所有绑定对象的集合。
 
-      <span data-ttu-id="e6f44-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6f44-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.BindingCollectionLoadOptions
     fullName: Excel.Interfaces.BindingCollectionLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.BindingCollectionLoadOptions#id:member'
       - 'excel!Excel.Interfaces.BindingCollectionLoadOptions#type:member'
   - uid: 'excel!Excel.Interfaces.BindingCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="e6f44-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="e6f44-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="e6f44-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="e6f44-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="e6f44-105">).</span><span class="sxs-lookup"><span data-stu-id="e6f44-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.BindingCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="e6f44-106">对于集合中的每一项：表示绑定标识符。</span><span class="sxs-lookup"><span data-stu-id="e6f44-106">For EACH ITEM in the collection: Represents binding identifier.</span></span> <span data-ttu-id="e6f44-107">只读。</span><span class="sxs-lookup"><span data-stu-id="e6f44-107">Read-only.</span></span>
+      对于集合中的每一项：表示绑定标识符。
 
-      <span data-ttu-id="e6f44-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6f44-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.BindingCollectionLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="e6f44-109">对于集合中的每一项：返回绑定的类型。</span><span class="sxs-lookup"><span data-stu-id="e6f44-109">For EACH ITEM in the collection: Returns the type of the binding.</span></span> <span data-ttu-id="e6f44-110">有关详细信息，请参阅 BindingType。</span><span class="sxs-lookup"><span data-stu-id="e6f44-110">See Excel.BindingType for details.</span></span> <span data-ttu-id="e6f44-111">只读。</span><span class="sxs-lookup"><span data-stu-id="e6f44-111">Read-only.</span></span>
+      对于集合中的每一项：返回绑定的类型。 有关详细信息，请参阅 BindingType。
 
-      <span data-ttu-id="e6f44-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6f44-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
