--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.styleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.styleupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.StyleUpdateData:interface'
-    summary: '<span data-ttu-id="7d0b1-101">用于更新样式对象上的数据的接口，可用于`style.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="7d0b1-101">An interface for updating data on the Style object, for use in `style.set({ ... })`</span></span><!-- --><span data-ttu-id="7d0b1-102">.</span><span class="sxs-lookup"><span data-stu-id="7d0b1-102"></span></span>'
+    summary: '用于更新样式对象上的数据的接口，可用于`style.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.StyleUpdateData
     fullName: Excel.Interfaces.StyleUpdateData
     langs:
@@ -30,9 +30,9 @@ items:
       - 'excel!Excel.Interfaces.StyleUpdateData#wrapText:member'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#borders:member'
     summary: |-
-      <span data-ttu-id="7d0b1-103">四个 Border 对象的 Border 集合，表示四个边框的样式。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-103">A Border collection of four Border objects that represent the style of the four borders.</span></span>
+      四个 Border 对象的 Border 集合，表示四个边框的样式。
 
-      <span data-ttu-id="7d0b1-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -45,9 +45,9 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderCollectionUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#fill:member'
     summary: |-
-      <span data-ttu-id="7d0b1-105">样式的填充。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-105">The Fill of the style.</span></span>
+      样式的填充。
 
-      <span data-ttu-id="7d0b1-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFillUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="7d0b1-107">该 Font 对象表示样式的字体。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-107">A Font object that represents the font of the style.</span></span>
+      该 Font 对象表示样式的字体。
 
-      <span data-ttu-id="7d0b1-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -75,9 +75,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFontUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#formulaHidden:member'
     summary: |-
-      <span data-ttu-id="7d0b1-109">指示工作表受保护时是否隐藏公式。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-109">Indicates if the formula will be hidden when the worksheet is protected.</span></span>
+      指定在工作表处于保护状态时是否隐藏公式。
 
-      <span data-ttu-id="7d0b1-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
     fullName: formulaHidden
     langs:
@@ -90,9 +90,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="7d0b1-111">表示样式水平对齐。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-111">Represents the horizontal alignment for the style.</span></span> <span data-ttu-id="7d0b1-112">有关详细信息，请参阅 HorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-112">See Excel.HorizontalAlignment for details.</span></span>
+      表示样式水平对齐。 有关详细信息，请参阅 HorizontalAlignment。
 
-      <span data-ttu-id="7d0b1-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -105,9 +105,9 @@ items:
           - 'excel!Excel.Interfaces.StyleUpdateData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeAlignment:member'
     summary: |-
-      <span data-ttu-id="7d0b1-114">指示样式是否包含 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-114">Indicates if the style includes the AutoIndent, HorizontalAlignment, VerticalAlignment, WrapText, IndentLevel, and TextOrientation properties.</span></span>
+      指定样式是否包括 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
 
-      <span data-ttu-id="7d0b1-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeAlignment
     fullName: includeAlignment
     langs:
@@ -120,9 +120,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeBorder:member'
     summary: |-
-      <span data-ttu-id="7d0b1-116">指示样式是否包含 Color、ColorIndex、LineStyle 和 Weight 边框属性。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-116">Indicates if the style includes the Color, ColorIndex, LineStyle, and Weight border properties.</span></span>
+      指定样式是否包含 Color、ColorIndex、LineStyle 和权数边框属性。
 
-      <span data-ttu-id="7d0b1-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeBorder
     fullName: includeBorder
     langs:
@@ -135,9 +135,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeFont:member'
     summary: |-
-      <span data-ttu-id="7d0b1-118">指示样式是否包含 Background、Bold、Color、ColorIndex、FontStyle、Italic、Name、Size、Strikethrough、Subscrip、Superscript 和 Underline 字体属性。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-118">Indicates if the style includes the Background, Bold, Color, ColorIndex, FontStyle, Italic, Name, Size, Strikethrough, Subscript, Superscript, and Underline font properties.</span></span>
+      指定样式是否包括背景、粗体、颜色、ColorIndex、FontStyle、斜体、名称、大小、删除线、下标、上标和下划线字体属性。
 
-      <span data-ttu-id="7d0b1-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeFont
     fullName: includeFont
     langs:
@@ -150,9 +150,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeNumber:member'
     summary: |-
-      <span data-ttu-id="7d0b1-120">指示样式是否包含 NumberFormat 属性。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-120">Indicates if the style includes the NumberFormat property.</span></span>
+      指定样式是否包含 NumberFormat 属性。
 
-      <span data-ttu-id="7d0b1-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeNumber
     fullName: includeNumber
     langs:
@@ -165,9 +165,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includePatterns:member'
     summary: |-
-      <span data-ttu-id="7d0b1-122">指示样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-122">Indicates if the style includes the Color, ColorIndex, InvertIfNegative, Pattern, PatternColor, and PatternColorIndex interior properties.</span></span>
+      指定样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
 
-      <span data-ttu-id="7d0b1-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includePatterns
     fullName: includePatterns
     langs:
@@ -180,9 +180,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#includeProtection:member'
     summary: |-
-      <span data-ttu-id="7d0b1-124">指示样式是否包含 FormulaHidden 和 Locked 保护属性。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-124">Indicates if the style includes the FormulaHidden and Locked protection properties.</span></span>
+      指定样式是否包含 FormulaHidden 和 Locked 保护属性。
 
-      <span data-ttu-id="7d0b1-125">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-125">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeProtection
     fullName: includeProtection
     langs:
@@ -195,9 +195,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#indentLevel:member'
     summary: |-
-      <span data-ttu-id="7d0b1-126">0 到 250 之间的一个整数，指示样式的缩进水平。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-126">An integer from 0 to 250 that indicates the indent level for the style.</span></span>
+      0 到 250 之间的一个整数，指示样式的缩进水平。
 
-      <span data-ttu-id="7d0b1-127">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: indentLevel
     fullName: indentLevel
     langs:
@@ -210,9 +210,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#locked:member'
     summary: |-
-      <span data-ttu-id="7d0b1-128">指示工作表受保护时是否锁定对象。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-128">Indicates if the object is locked when the worksheet is protected.</span></span>
+      指定在工作表处于保护状态时是否锁定对象。
 
-      <span data-ttu-id="7d0b1-129">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-129">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
     fullName: locked
     langs:
@@ -225,9 +225,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#numberFormat:member'
     summary: |-
-      <span data-ttu-id="7d0b1-130">样式中数字格式的格式代码。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-130">The format code of the number format for the style.</span></span>
+      样式中数字格式的格式代码。
 
-      <span data-ttu-id="7d0b1-131">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-131">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -240,9 +240,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#numberFormatLocal:member'
     summary: |-
-      <span data-ttu-id="7d0b1-132">样式中数字格式的本地化格式代码。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-132">The localized format code of the number format for the style.</span></span>
+      样式中数字格式的本地化格式代码。
 
-      <span data-ttu-id="7d0b1-133">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-133">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormatLocal
     fullName: numberFormatLocal
     langs:
@@ -255,9 +255,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#readingOrder:member'
     summary: |-
-      <span data-ttu-id="7d0b1-134">样式中的阅读顺序。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-134">The reading order for the style.</span></span>
+      样式中的阅读顺序。
 
-      <span data-ttu-id="7d0b1-135">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-135">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -270,9 +270,9 @@ items:
           - 'excel!Excel.Interfaces.StyleUpdateData#readingOrder~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#shrinkToFit:member'
     summary: |-
-      <span data-ttu-id="7d0b1-136">指示文本是否自动缩小以适合可用列宽。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-136">Indicates if text automatically shrinks to fit in the available column width.</span></span>
+      指定文本是否自动收缩以显示可用列宽。
 
-      <span data-ttu-id="7d0b1-137">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-137">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
     fullName: shrinkToFit
     langs:
@@ -285,9 +285,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="7d0b1-138">表示样式的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-138">Represents the vertical alignment for the style.</span></span> <span data-ttu-id="7d0b1-139">有关详细信息，请参阅 VerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-139">See Excel.VerticalAlignment for details.</span></span>
+      指定样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
-      <span data-ttu-id="7d0b1-140">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-140">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -300,9 +300,9 @@ items:
           - 'excel!Excel.Interfaces.StyleUpdateData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData#wrapText:member'
     summary: |-
-      <span data-ttu-id="7d0b1-141">指示 Microsoft Excel 是否将对象中的文本换行。</span><span class="sxs-lookup"><span data-stu-id="7d0b1-141">Indicates if Microsoft Excel wraps the text in the object.</span></span>
+      指定 Excel 是否对对象中的文本进行换行。
 
-      <span data-ttu-id="7d0b1-142">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d0b1-142">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
