--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.filterpivothierarchy.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.filterpivothierarchy.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.FilterPivotHierarchy:class'
     summary: |-
-      <span data-ttu-id="b37df-101">表示 Excel FilterPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="b37df-101">Represents the Excel FilterPivotHierarchy.</span></span>
+      表示 Excel FilterPivotHierarchy。
 
-      <span data-ttu-id="b37df-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b37df-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.FilterPivotHierarchy
     fullName: Excel.FilterPivotHierarchy
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.FilterPivotHierarchy#context:member'
@@ -28,7 +28,7 @@ items:
       - 'excel!Excel.FilterPivotHierarchy#setToDefault:member(1)'
       - 'excel!Excel.FilterPivotHierarchy#toJSON:member(1)'
   - uid: 'excel!Excel.FilterPivotHierarchy#context:member'
-    summary: <span data-ttu-id="b37df-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="b37df-103">The request context associated with the object.</span></span> <span data-ttu-id="b37df-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="b37df-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -41,9 +41,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.FilterPivotHierarchy#enableMultipleFilterItems:member'
     summary: |-
-      <span data-ttu-id="b37df-105">确定是否允许多个筛选项。</span><span class="sxs-lookup"><span data-stu-id="b37df-105">Determines whether to allow multiple filter items.</span></span>
+      确定是否允许多个筛选项。
 
-      <span data-ttu-id="b37df-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b37df-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableMultipleFilterItems
     fullName: enableMultipleFilterItems
     langs:
@@ -56,9 +56,9 @@ items:
           - boolean
   - uid: 'excel!Excel.FilterPivotHierarchy#fields:member'
     summary: |-
-      <span data-ttu-id="b37df-107">返回与 FilterPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="b37df-107">Returns the PivotFields associated with the FilterPivotHierarchy.</span></span>
+      返回与 FilterPivotHierarchy 相关联的 PivotFields。
 
-      <span data-ttu-id="b37df-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b37df-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fields
     fullName: fields
     langs:
@@ -71,9 +71,9 @@ items:
           - 'excel!Excel.PivotFieldCollection:class'
   - uid: 'excel!Excel.FilterPivotHierarchy#id:member'
     summary: |-
-      <span data-ttu-id="b37df-109">FilterPivotHierarchy 的 ID。</span><span class="sxs-lookup"><span data-stu-id="b37df-109">Id of the FilterPivotHierarchy.</span></span>
+      FilterPivotHierarchy 的 ID。
 
-      <span data-ttu-id="b37df-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b37df-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -85,7 +85,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.FilterPivotHierarchy#load:member(1)'
-    summary: <span data-ttu-id="b37df-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="b37df-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="b37df-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="b37df-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -99,11 +99,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="b37df-113">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="b37df-113">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions:interface'
   - uid: 'excel!Excel.FilterPivotHierarchy#load:member(2)'
-    summary: <span data-ttu-id="b37df-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="b37df-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="b37df-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="b37df-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -117,11 +117,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="b37df-116">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="b37df-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.FilterPivotHierarchy#load:member(3)'
-    summary: <span data-ttu-id="b37df-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="b37df-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="b37df-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="b37df-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -139,7 +139,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="b37df-119">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="b37df-119">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -148,9 +148,9 @@ items:
                       }
   - uid: 'excel!Excel.FilterPivotHierarchy#name:member'
     summary: |-
-      <span data-ttu-id="b37df-120">FilterPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="b37df-120">Name of the FilterPivotHierarchy.</span></span>
+      FilterPivotHierarchy 的名称。
 
-      <span data-ttu-id="b37df-121">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b37df-121">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -163,9 +163,9 @@ items:
           - string
   - uid: 'excel!Excel.FilterPivotHierarchy#position:member'
     summary: |-
-      <span data-ttu-id="b37df-122">FilterPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="b37df-122">Position of the FilterPivotHierarchy.</span></span>
+      FilterPivotHierarchy 的位置。
 
-      <span data-ttu-id="b37df-123">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b37df-123">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -177,9 +177,9 @@ items:
         type:
           - number
   - uid: 'excel!Excel.FilterPivotHierarchy#set:member(1)'
-    summary: '<span data-ttu-id="b37df-124">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="b37df-124">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="b37df-125">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="b37df-125">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="b37df-126">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="b37df-126">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.FilterPivotHierarchy): void`
     name: 'set(properties, options)'
@@ -195,15 +195,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="b37df-127">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="b37df-127">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.FilterPivotHierarchyUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="b37df-128">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="b37df-128">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.FilterPivotHierarchy#set:member(2)'
-    summary: '<span data-ttu-id="b37df-129">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="b37df-129">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -222,9 +222,9 @@ items:
             - 'excel!Excel.FilterPivotHierarchy:class'
   - uid: 'excel!Excel.FilterPivotHierarchy#setToDefault:member(1)'
     summary: |-
-      <span data-ttu-id="b37df-130">将 FilterPivotHierarchy 重置回其默认值。</span><span class="sxs-lookup"><span data-stu-id="b37df-130">Reset the FilterPivotHierarchy back to its default values.</span></span>
+      将 FilterPivotHierarchy 重置回其默认值。
 
-      <span data-ttu-id="b37df-131">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b37df-131">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: setToDefault()
     fullName: setToDefault()
     langs:
@@ -237,7 +237,7 @@ items:
           - void
         description: ''
   - uid: 'excel!Excel.FilterPivotHierarchy#toJSON:member(1)'
-    summary: '<span data-ttu-id="b37df-132">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="b37df-132">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="b37df-133">.</span><span class="sxs-lookup"><span data-stu-id="b37df-133"></span></span> <span data-ttu-id="b37df-134">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="b37df-134"></span></span><!-- --><span data-ttu-id="b37df-135">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 FilterPivotHierarchy 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.FilterPivotHierarchyData`</span><span class="sxs-lookup"><span data-stu-id="b37df-135">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.FilterPivotHierarchy object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.FilterPivotHierarchyData`</span></span><!-- --><span data-ttu-id="b37df-136">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="b37df-136">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 FilterPivotHierarchy 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.FilterPivotHierarchyData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -250,7 +250,7 @@ items:
           - 'excel!Excel.Interfaces.FilterPivotHierarchyData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -262,7 +262,7 @@ references:
     name: Excel.Interfaces.FilterPivotHierarchyLoadOptions
   - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyUpdateData:interface'
     name: Interfaces.FilterPivotHierarchyUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData:interface'
     name: Excel.Interfaces.FilterPivotHierarchyData
