--- a/docs/docs-ref-autogen/outlook/toc.yml
+++ b/docs/docs-ref-autogen/outlook/toc.yml
@@ -60,6 +60,8 @@ items:
             uid: 'outlook!Office.AttachmentContent:interface'
           - name: AttachmentDetails
             uid: 'outlook!Office.AttachmentDetails:interface'
+          - name: AttachmentDetailsCompose
+            uid: 'outlook!Office.AttachmentDetailsCompose:interface'
           - name: AttachmentsChangedEventArgs
             uid: 'outlook!Office.AttachmentsChangedEventArgs:interface'
           - name: 正文
@@ -92,7 +94,7 @@ items:
             uid: 'outlook!Office.InternetHeaders:interface'
           - name: IsAllDayEvent
             uid: 'outlook!Office.IsAllDayEvent:interface'
-          - name: Item
+          - name: 项目
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -118,11 +120,11 @@ items:
             uid: 'outlook!Office.NotificationMessages:interface'
           - name: OfficeThemeChangedEventArgs
             uid: 'outlook!Office.OfficeThemeChangedEventArgs:interface'
-          - name: 组织者
+          - name: Organizer
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: 收件人
+          - name: Recipients
             uid: 'outlook!Office.Recipients:interface'
           - name: RecipientsChangedEventArgs
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
@@ -142,13 +144,13 @@ items:
             uid: 'outlook!Office.ReplyFormData:interface'
           - name: RoamingSettings
             uid: 'outlook!Office.RoamingSettings:interface'
-          - name: 敏感度
+          - name: Sensitivity
             uid: 'outlook!Office.Sensitivity:interface'
           - name: SeriesTime
             uid: 'outlook!Office.SeriesTime:interface'
           - name: SharedProperties
             uid: 'outlook!Office.SharedProperties:interface'
-          - name: 主题
+          - name: Subject
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
@@ -224,7 +226,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
