--- a/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.attachmenttype.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.attachmenttype.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'outlook!Office.MailboxEnums.AttachmentType:enum'
     summary: 指定附件的类型。
-    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读'
+    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读'
     name: Office.MailboxEnums.AttachmentType
     fullName: Office.MailboxEnums.AttachmentType
     langs:
@@ -14,7 +14,10 @@ items:
       - 'outlook!Office.MailboxEnums.AttachmentType.File:member'
       - 'outlook!Office.MailboxEnums.AttachmentType.Item:member'
   - uid: 'outlook!Office.MailboxEnums.AttachmentType.Cloud:member'
-    summary: 附件存储在云位置，如 OneDrive。 附件`id`的属性包含指向文件的 URL。
+    summary: |-
+      附件存储在云位置，如 OneDrive。
+
+      **重要说明**：在阅读模式下， `id` 附件[详细信息](xref:outlook!Office.AttachmentDetails:interface)对象的属性包含指向文件的 URL。 在要求集1.8 中， `url` 附件的[详细信息](xref:outlook!Office.AttachmentDetailsCompose:interface)对象中包含的属性包含在撰写模式下的文件的 URL。
     name: Cloud
     fullName: Cloud
     langs:
