--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.attachmentschangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.attachmentschangedeventargs.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'outlook!Office.AttachmentsChangedEventArgs:interface'
     summary: |-
-      提供有关引发`Office.EventType.AttachmentsChanged`事件的附件的信息。
+      提供有关引发事件的附件的信息 `Office.EventType.AttachmentsChanged` 。
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     name: Office.AttachmentsChangedEventArgs
@@ -17,7 +17,7 @@ items:
       - 'outlook!Office.AttachmentsChangedEventArgs#type:member'
   - uid: 'outlook!Office.AttachmentsChangedEventArgs#attachmentDetails:member'
     summary: |-
-      代表添加或删除的附件集。 对于每个此类附件，获取[AttachmentDetails](xref:outlook!Office.AttachmentDetails:interface)属性的子集：`id`<!-- -->, `name`<!-- -->, `size`<!-- -->，并`attachmentType`<!-- -->.
+      代表添加或删除的附件集。 对于每个此类附件，获取`id`<!-- -->, `name`<!-- -->, `size`<!-- -->和 `attachmentType` 属性。
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     name: attachmentDetails
