--- a/docs/docs-ref-autogen/outlook_1_8/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/toc.yml
@@ -56,6 +56,8 @@ items:
             uid: 'outlook!Office.AttachmentContent:interface'
           - name: AttachmentDetails
             uid: 'outlook!Office.AttachmentDetails:interface'
+          - name: AttachmentDetailsCompose
+            uid: 'outlook!Office.AttachmentDetailsCompose:interface'
           - name: AttachmentsChangedEventArgs
             uid: 'outlook!Office.AttachmentsChangedEventArgs:interface'
           - name: 正文
@@ -86,7 +88,7 @@ items:
             uid: 'outlook!Office.From:interface'
           - name: InternetHeaders
             uid: 'outlook!Office.InternetHeaders:interface'
-          - name: Item
+          - name: 项目
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -110,11 +112,11 @@ items:
             uid: 'outlook!Office.NotificationMessageDetails:interface'
           - name: NotificationMessages
             uid: 'outlook!Office.NotificationMessages:interface'
-          - name: 组织者
+          - name: Organizer
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: 收件人
+          - name: Recipients
             uid: 'outlook!Office.Recipients:interface'
           - name: RecipientsChangedEventArgs
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
@@ -138,7 +140,7 @@ items:
             uid: 'outlook!Office.SeriesTime:interface'
           - name: SharedProperties
             uid: 'outlook!Office.SharedProperties:interface'
-          - name: 主题
+          - name: Subject
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
@@ -214,7 +216,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
